# pkg/model/model.go
@@ -27,18 +27,12 @@ type SmartServiceDesign struct {
 
 //cqrs
 type SmartServiceRelease struct {
-	Id              string           `json:"id" bson:"id"`
-	DesignId        string           `json:"design_id" bson:"design_id"`
-	Name            string           `json:"name" bson:"name"`
-	Description     string           `json:"description" bson:"description"`
-	CreatedAt       int64            `json:"created_at" bson:"created_at"` //unix timestamp, set by service on creation
-	Error           string           `json:"error,omitempty" bson:"error"` //is set if errors occurred while releasing
-	PermissionsInfo *PermissionsInfo `json:"permissions_info,omitempty"`   //optional, set if query parameter permissions_info=true
-}
-
-type PermissionsInfo struct {
-	Shared      bool            `json:"shared"`
-	Permissions map[string]bool `json:"permissions"`
+	Id          string `json:"id" bson:"id"`
+	DesignId    string `json:"design_id" bson:"design_id"`
+	Name        string `json:"name" bson:"name"`
+	Description string `json:"description" bson:"description"`
+	CreatedAt   int64  `json:"created_at" bson:"created_at"` //unix timestamp, set by service on creation
+	Error       string `json:"error,omitempty" bson:"error"` //is set if errors occurred while releasing
 }
 
 type SmartServiceReleaseExtended struct {
@@ -46,6 +40,12 @@ type SmartServiceReleaseExtended struct {
 	BpmnXml             string                  `json:"bpmn_xml" bson:"bpmn_xml"`
 	SvgXml              string                  `json:"svg_xml" bson:"svg_xml"`
 	ParsedInfo          SmartServiceReleaseInfo `json:"parsed_info" bson:"parsed_info"`
+	PermissionsInfo     PermissionsInfo         `json:"permissions_info,omitempty"` //optional, set if query parameter permissions_info=true
+}
+
+type PermissionsInfo struct {
+	Shared      bool            `json:"shared"`
+	Permissions map[string]bool `json:"permissions"`
 }
 
 type SmartServiceReleaseInfo struct {
